add knn metrics

--- a/KNearestNeighbors.ipynb
+++ b/KNearestNeighbors.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
        "sklearn.utils.Bunch"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "       [5. , 3.6, 1.4, 0.2, 0. ]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "4       0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,16 +200,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f3822ccbe48>"
+       "<matplotlib.legend.Legend at 0x7fc84c2c3eb8>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,16 +258,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7f3822d0e0b8>"
+       "<seaborn.axisgrid.PairGrid at 0x7fc84c2cab00>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "           weights='uniform')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -356,19 +356,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.axis.YTick at 0x7f381f44f898>,\n",
-       "  <matplotlib.axis.YTick at 0x7f381f0879b0>,\n",
-       "  <matplotlib.axis.YTick at 0x7f381f31f940>],\n",
+       "([<matplotlib.axis.YTick at 0x7fc847208b38>,\n",
+       "  <matplotlib.axis.YTick at 0x7fc847366a90>,\n",
+       "  <matplotlib.axis.YTick at 0x7fc8472adbe0>],\n",
        " <a list of 3 Text yticklabel objects>)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -395,17 +395,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La exactitud es: 0.9666666666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"La exactitud es: \"+str(metrics.accuracy_score(y,y_pred)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sepal length (cm)    float64\n",
+       "sepal width (cm)     float64\n",
+       "petal length (cm)    float64\n",
+       "petal width (cm)     float64\n",
+       "species               object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Continuación: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[50  0  0]\n",
+      " [ 0 47  3]\n",
+      " [ 0  2 48]]\n",
+      "Exactitud:  0.9666666666666667\n",
+      "kappa:  0.95\n",
+      "---------------------------------\n",
+      "Metricas para la categoría  setosa\n",
+      "Precisión:  1.0\n",
+      "Recall:  1.0\n",
+      "Especificidad:  0.98\n",
+      "F1-score:  0.724997499749975\n",
+      "---------------------------------\n",
+      "Metricas para la categoría  versicolor\n",
+      "Precisión:  0.9591836734693877\n",
+      "Recall:  0.94\n",
+      "Especificidad:  1.0\n",
+      "F1-score:  0.724997499749975\n",
+      "---------------------------------\n",
+      "Metricas para la categoría  virginica\n",
+      "Precisión:  0.9411764705882353\n",
+      "Recall:  0.96\n",
+      "Especificidad:  0.9797979797979798\n",
+      "F1-score:  0.724997499749975\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/yeye/anaconda3/lib/python3.6/site-packages/numpy/lib/arraysetops.py:468: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "  mask &= (ar1 != a)\n",
+      "/home/yeye/anaconda3/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/home/yeye/anaconda3/lib/python3.6/site-packages/sklearn/metrics/classification.py:1137: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no true samples.\n",
+      "  'recall', 'true', average, warn_for)\n",
+      "/home/yeye/anaconda3/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/home/yeye/anaconda3/lib/python3.6/site-packages/sklearn/metrics/classification.py:1137: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no true samples.\n",
+      "  'recall', 'true', average, warn_for)\n",
+      "/home/yeye/anaconda3/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/home/yeye/anaconda3/lib/python3.6/site-packages/sklearn/metrics/classification.py:1137: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no true samples.\n",
+      "  'recall', 'true', average, warn_for)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cm)\n",
+    "print(\"Exactitud: \", metrics.accuracy_score(y,y_pred))\n",
+    "print(\"kappa: \", metrics.cohen_kappa_score(y, y_pred))\n",
+    "print(\"---------------------------------\")\n",
+    "print(\"Metricas para la categoría \",iris.target_names[0])\n",
+    "print(\"Precisión: \", metrics.precision_score(y, y_pred, labels=[0], average='macro'))\n",
+    "print(\"Recall: \", metrics.recall_score(y, y_pred, labels=[0], average='macro'))\n",
+    "VN = 98\n",
+    "FP = 2\n",
+    "specificity=VN/(VN+FP)\n",
+    "print(\"Especificidad: \",specificity)\n",
+    "print(\"F1-score: \",metrics.f1_score(y, y_pred, labels[0],average='macro'))\n",
+    "print(\"---------------------------------\")\n",
+    "print(\"Metricas para la categoría \",iris.target_names[1])\n",
+    "print(\"Precisión: \", metrics.precision_score(y, y_pred, labels=[1], average='macro'))\n",
+    "print(\"Recall: \", metrics.recall_score(y, y_pred, labels=[1], average='macro'))\n",
+    "VN = np.sum(cm[1:3,1:3])\n",
+    "FP = np.sum(cm[0,1:3])\n",
+    "specificity=VN/(VN+FP)\n",
+    "print(\"Especificidad: \",specificity)\n",
+    "print(\"F1-score: \",metrics.f1_score(y, y_pred, labels[1],average='macro'))\n",
+    "print(\"---------------------------------\")\n",
+    "print(\"Metricas para la categoría \",iris.target_names[2])\n",
+    "print(\"Precisión: \", metrics.precision_score(y, y_pred, labels=[2], average='macro'))\n",
+    "print(\"Recall: \", metrics.recall_score(y, y_pred, labels=[2], average='macro'))\n",
+    "VN = np.sum(cm[0:2,0:2])\n",
+    "FP = np.sum(cm[2,0:2])\n",
+    "specificity=VN/(VN+FP)\n",
+    "print(\"Especificidad: \",specificity)\n",
+    "print(\"F1-score: \",metrics.f1_score(y, y_pred, labels[2],average='macro'))\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "    "
+   ]
   }
  ],
  "metadata": {
